Update PHP_VPC_3DS 2.5 Party_Order.html

--- a/PHP_VPC_3DS 2.5 Party_Order.html
+++ b/PHP_VPC_3DS 2.5 Party_Order.html
@@ -85,7 +85,7 @@
                     </tr>
 					    <tr>
         <td align="right"><strong><em>Receipt ReturnURL: </em></strong></td>
-        <td><input name="vpc_ReturnURL" size="65" value="PHP_VPC_3DS 2.5 Party_DR.php" maxlength="250"/></td>
+        <td><input name="vpc_ReturnURL" size="65" value="https://victor-app-02.herokuapp.com/PHP_VPC_3DS 2.5 Party_DR.php" maxlength="250"/></td>
     </tr>
                     <tr class="shade">
 
