Update PHP_VPC_3DS 2.5 Party_Order.html

--- a/PHP_VPC_3DS 2.5 Party_Order.html
+++ b/PHP_VPC_3DS 2.5 Party_Order.html
@@ -57,6 +57,10 @@
 						<td align="right"><strong><em>MerchantID: </em></strong></td>
 						<td><input name="vpc_Merchant" value="" size="20" maxlength="16"/></td>
 					</tr>
+		<tr class="shade">
+						<td align="right"><strong><em>vpc_SecureHash: </em></strong></td>
+						<td><input name="vpc_SecureHash" value="" size="20" maxlength="100"/></td>
+					</tr>
 					<tr>
 						<td align="right"><strong><em>Merchant AccessCode: </em></strong></td>
 						<td><input name="vpc_AccessCode" value="" size="20" maxlength="8"/></td>
