--- a/SetHashValue.html
+++ b/SetHashValue.html
@@ -32,7 +32,7 @@
 <table width='100%' border='2' cellpadding='2' bgcolor='#C1C1C1'><tr><td bgcolor='#E1E1E1' width='90%'><h2 class='co'>&nbsp;Virtual Payment Client Example</h2></td><td bgcolor='#C1C1C1' align='center'><h3 class='co'>MIGS</h3></td></tr></table>
 	<center><h1>PHP 2.5 Party (MerchantHosted Authenticate and Pay) Example</H1></center>
 </table>
-<form action="PHP_VPC_3DS 2.5 Party_DO.php" method="post">
+<form action="SecureHash.php" method="post">
 	<table width="80%" align="center" border="0" cellpadding='0' cellspacing='0'>
     <tr class="shade">
 	    <td align="right"><strong><em>Virtual Payment Client HashSecret:&nbsp;</em></strong></td>
