--- a/SetHashValue.html
+++ b/SetHashValue.html
@@ -39,7 +39,7 @@
   </tr>
 		<tr class="shade">
 						<td align="right"><strong><em>vpc_SecureHash: </em></strong></td>
-						<td><input name="vpc_SecureHash" value="" size="60" maxlength="60"/></td>
+						<td><input name="vpc_SecureHashNew" value="" size="60" maxlength="60"/></td>
 					</tr>
 		
 		                    <tr>
