Update PHP_VPC_3DS 2.5 Party_Order.html

--- a/PHP_VPC_3DS 2.5 Party_Order.html
+++ b/PHP_VPC_3DS 2.5 Party_Order.html
@@ -56,6 +56,10 @@
 						<td align="right"><strong><em>MerchantID: </em></strong></td>
 						<td><input name="vpc_Merchant" value="" size="20" maxlength="16"/></td>
 					</tr>
+				<tr class="shade">
+						<td align="right"><strong><em>vpc_SecureHash: </em></strong></td>
+						<td><input name="vpc_SecureHashNew" value="" size="60" maxlength="60"/></td>
+					</tr>
 		<tr class="shade">
 					<tr>
 						<td align="right"><strong><em>Merchant AccessCode: </em></strong></td>
