--- a/PHP_VPC_3Party_Order.html
+++ b/PHP_VPC_3Party_Order.html
@@ -100,7 +100,7 @@
 
 <tr class="shade">
     <td align="right"><strong><em>Receipt ReturnURL: </em></strong></td>
-    <td><input name="vpc_ReturnURL" size="65" value="http://tns-mrpt2-bris.qabri.mastercard.int/MIGS_testing/3Party/PHP_VPC_3Party_Order_DR.php" maxlength="250"/></td>
+    <td><input name="vpc_ReturnURL" size="65" value="https://victor-app-02.herokuapp.com/PHP_VPC_3Party_Order_DR.php" maxlength="250"/></td>
 </tr>
 <!--<tr>
     <td align="right"><strong><em>Payment Server Display Language Locale: </em></strong></td>
