--- a/PHP_VPC_3Party_Order.html
+++ b/PHP_VPC_3Party_Order.html
@@ -93,9 +93,17 @@
     <td align="right"><strong><em>Purchase Amount: </em></strong></td>
     <td><input name="vpc_Amount" value="100" maxlength="10"/></td>
 </tr>
---<tr>
+<tr>
     <td align="right"><strong><em>VPC Currency </em></strong></td>
     <td><input name="vpc_Currency" value="AUD"size="40" maxlength="40"/></td>
+</tr>
+ <tr>
+    <td align="right"><strong><em>vpc_Return3ds2Details: </em></strong></td>
+    <td><input name="vpc_Return3ds2Details" value="" maxlength="10"/></td>
+</tr>
+<tr>
+    <td align="right"><strong><em>vpc_3ds2AuthenticatePayer: </em></strong></td>
+    <td><input name="vpc_3ds2AuthenticatePayer" value=""size="55" maxlength="85"/></td>
 </tr>
 
 <tr class="shade">
