--- a/PHP_VPC_3Party_Order.html
+++ b/PHP_VPC_3Party_Order.html
@@ -100,6 +100,10 @@
  <tr>
     <td align="right"><strong><em>vpc_Return3ds2Details: </em></strong></td>
     <td><input name="vpc_Return3ds2Details" value="" maxlength="10"/></td>
+</tr> 
+ <tr>
+    <td align="right"><strong><em>vpc_3DS2dsTransactionId: </em></strong></td>
+    <td><input name="vpc_3DS2dsTransactionId" value="" maxlength="10"/></td>
 </tr>
 <tr>
     <td align="right"><strong><em>vpc_3ds2AuthenticatePayer: </em></strong></td>
