Update PHP_VPC_3DS 2.5 Party_Order.html

--- a/PHP_VPC_3DS 2.5 Party_Order.html
+++ b/PHP_VPC_3DS 2.5 Party_Order.html
@@ -37,7 +37,7 @@
 	<table width="80%" align="center" border="0" cellpadding='0' cellspacing='0'>
     <tr class="shade">
         <td align="right"><strong><em>Virtual Payment Client URL:&nbsp;</em></strong></td>
-        <td><input name="virtualPaymentClientURL" size="65" value="https://migs.mastercard.com.au/vpcpay" maxlength="300"/></td>
+        <td><input name="virtualPaymentClientURL" size="65" value="https://ap-gateway.mastercard.com/vpcdps" maxlength="300"/></td>
     </tr>
     <tr><td colspan="2">&nbsp;<hr width="75%">&nbsp;</td></tr>
     <tr class="title">
@@ -89,7 +89,7 @@
                     </tr>
 					    <tr>
         <td align="right"><strong><em>Receipt ReturnURL: </em></strong></td>
-        <td><input name="vpc_ReturnURL" size="65" value="https://victor-app-02.herokuapp.com/PHP_VPC_3DS 2.5 Party_DR.php" maxlength="250"/></td>
+        <td><input name="vpc_ReturnURL" size="65" value="https://vpcm-vikas-test.herokuapp.com/PHP_VPC_3DS%202.5%20Party_Order.html" maxlength="250"/></td>
     </tr>
                     <tr class="shade">
 
